# polygraphrag

./: .env.example  .gitattributes  .gitignore  Dockerfile  NOTICE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  smoke_test.py  smoke_test_docker.sh
.github/workflows/: docker-publish.yml
db/: Dockerfile  init.sql
docs/: api-reference.md  architecture.md  configuration.md  graph-visualization-guide.md  lightrag-internals.md
scripts/: e2e_isolation.py  smoke_test.py  smoke_test_docker.sh
server/: __init__.py  auth.py  config.py  db.py  deps.py  graph.py  ingest.py  llm.py  references.py  schemas.py  worker.py  workspaces.py
server/routers/: __init__.py  documents.py  query.py  workspaces.py
tests/: test_e2e.py  test_server.py
